modules/k8s/env/k3s/nextcloud/01-frontal.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nc-frontal-fariseos
  namespace: formacio
spec:
  selector:
    matchLabels:
      application: nc-frontal-fariseos
      entorn: formacio
      tier: frontal
      tecnologia: nextcloud
  serviceName: "nc-frontal-fariseos"
  replicas: 1
  template:
    metadata:
      labels:
        application: nc-frontal-fariseos
        entorn: formacio
        tier: frontal
        tecnologia: nextcloud
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: nc-frontal-fariseos
          image: registreformacio.$domain_intra_ba/nextcloud
          ports:
            - containerPort: 80
              name: web
          volumeMounts:
            - name: nc-frontal-fariseos
              mountPath: /var/www/html
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "128Mi"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - "k8s-formacio-worker0"
  volumeClaimTemplates:
    - metadata:
        name: nc-frontal-fariseos
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "k8s-formacio-b15390a-contingut"
        resources:
          requests:
            storage: 1Gi
