modules/k8s/env/k3s/nextcloud/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nc-frontal-fariseos
  namespace: formacio
  labels:
    application: nc-frontal-fariseos
    entorn: formacio
    tier: frontal
    tecnologia: k8s
spec:
  defaultBackend:
    service:
      name: nc-frontal-fariseos
      port:
        number: 80
  rules:
    - host: nextcloud-fariseos.$domain_intra_ba
      http:
        paths:
          - backend:
              service:
                name: nc-frontal-fariseos
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer:
    ingress:
      - ip: 172.16.208.20
